# embedded-lab

./: .gitignore  CMakeLists.txt  Readme.md  main  main.c
include/: app_log.h
platform/posix/: app_log_posix.c
src/: main.c
